content/themes/base is weg

--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AgendaController.cs" />
     <Compile Include="Controllers\CheckOutController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ContentManagementController.cs" />
@@ -234,6 +235,9 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -254,6 +258,22 @@
   <ItemGroup>
     <Content Include="bin\Antlr3.Runtime.dll" />
     <Content Include="bin\Antlr3.Runtime.pdb" />
+    <Content Include="bin\DevExpress.Data.v12.2.dll" />
+    <Content Include="bin\DevExpress.Office.v12.2.Core.dll" />
+    <Content Include="bin\DevExpress.PivotGrid.v12.2.Core.dll" />
+    <Content Include="bin\DevExpress.Printing.v12.2.Core.dll" />
+    <Content Include="bin\DevExpress.RichEdit.v12.2.Core.dll" />
+    <Content Include="bin\DevExpress.SpellChecker.v12.2.Core.dll" />
+    <Content Include="bin\DevExpress.Utils.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.ASPxHtmlEditor.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.ASPxPivotGrid.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.ASPxScheduler.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.ASPxSpellChecker.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.ASPxThemes.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.ASPxTreeList.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.Mvc.v12.2.dll" />
+    <Content Include="bin\DevExpress.Web.v12.2.dll" />
+    <Content Include="bin\DevExpress.XtraPivotGrid.v12.2.dll" />
     <Content Include="bin\EntityFramework.dll" />
     <Content Include="bin\EntityFramework.SqlServer.dll" />
     <Content Include="bin\EntityFramework.SqlServer.xml" />
@@ -342,54 +362,38 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
-    <Content Include="Content\themes\base\accordion.css" />
-    <Content Include="Content\themes\base\all.css" />
-    <Content Include="Content\themes\base\autocomplete.css" />
-    <Content Include="Content\themes\base\base.css" />
-    <Content Include="Content\themes\base\button.css" />
-    <Content Include="Content\themes\base\core.css" />
-    <Content Include="Content\themes\base\datepicker.css" />
-    <Content Include="Content\themes\base\dialog.css" />
-    <Content Include="Content\themes\base\draggable.css" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\base\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_444444_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_555555_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_777620_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_777777_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_cc0000_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\base\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="Content\themes\base\jquery-ui.css" />
-    <Content Include="Content\themes\base\jquery-ui.min.css" />
-    <Content Include="Content\themes\base\menu.css" />
-    <Content Include="Content\themes\base\progressbar.css" />
-    <Content Include="Content\themes\base\resizable.css" />
-    <Content Include="Content\themes\base\selectable.css" />
-    <Content Include="Content\themes\base\selectmenu.css" />
-    <Content Include="Content\themes\base\slider.css" />
-    <Content Include="Content\themes\base\sortable.css" />
-    <Content Include="Content\themes\base\spinner.css" />
-    <Content Include="Content\themes\base\tabs.css" />
-    <Content Include="Content\themes\base\theme.css" />
-    <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Content\Agenda.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\Dinner\Detailed\u103.jpg" />
+    <Content Include="img\Dinner\Detailed\u111.png" />
+    <Content Include="img\Dinner\Detailed\u115.png" />
+    <Content Include="img\Dinner\Detailed\u117.jpg" />
+    <Content Include="img\Dinner\Detailed\u130.jpg" />
+    <Content Include="img\Dinner\Detailed\u144.jpg" />
+    <Content Include="img\Dinner\Detailed\u157.jpg" />
+    <Content Include="img\Dinner\Detailed\u171.jpg" />
+    <Content Include="img\Dinner\Detailed\u74.jpg" />
+    <Content Include="img\Dinner\Detailed\u83.png" />
+    <Content Include="img\Dinner\Detailed\u86.png" />
+    <Content Include="img\Dinner\Detailed\u89.jpg" />
     <Content Include="img\Header\HF_logo_header.png" />
     <Content Include="img\Header\Shopping_cart_header.png" />
+    <Content Include="img\Historic\HistoricDropMarker - Copy.png" />
+    <Content Include="img\Historic\HistoricDropMarker.png" />
+    <Content Include="img\Historic\HistoricRoute.png" />
+    <Content Include="img\Historic\Info1.jpg" />
+    <Content Include="img\Historic\Info2.jpg" />
+    <Content Include="img\Historic\Info3.jpg" />
+    <Content Include="img\Historic\Info4.jpg" />
+    <Content Include="img\Historic\Info5.jpg" />
+    <Content Include="img\Historic\Info6.jpg" />
+    <Content Include="img\Historic\Info7.jpg" />
+    <Content Include="img\Historic\Info8.jpg" />
+    <Content Include="img\Historic\Info9.jpg" />
     <Content Include="img\Historic\TopImage1.JPG" />
     <Content Include="img\Historic\TopImage2.jpg" />
     <Content Include="img\Historic\TopImage3.jpg" />
@@ -418,9 +422,17 @@
     <Content Include="img\Jazz\TomThomsomAssemble.png" />
     <Content Include="img\Jazz\UncleSue.png" />
     <Content Include="img\Jazz\WickedJazzSounds.png" />
+    <Content Include="img\Talking\BriggiteKaandorp.jpg" />
+    <Content Include="img\Talking\FemkeHalsema.jpg" />
+    <Content Include="img\Talking\GielBeelen.jpg" />
+    <Content Include="img\Talking\JobCohen.jpg" />
+    <Content Include="img\Talking\PaulWitteman.jpg" />
+    <Content Include="img\Talking\RobTrip.jpg" />
     <Content Include="obj\Debug\HaarlemFestival.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\HaarlemFestival.dll" />
     <Content Include="obj\Debug\HaarlemFestival.pdb" />
+    <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
+    <Content Include="obj\Release\HaarlemFestival.csproj.FileListAbsolute.txt" />
     <Content Include="Scripts\Admin.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -471,6 +483,10 @@
     <Content Include="obj\Debug\HaarlemFestival.csproj.CopyComplete" />
     <Content Include="obj\Debug\HaarlemFestival.csproj.CoreCompileInputs.cache" />
     <Content Include="obj\Debug\HaarlemFestival.csproj.GenerateResource.Cache" />
+    <Content Include="obj\Release\CoreCompileInputs.cache" />
+    <Content Include="obj\Release\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="obj\Release\HaarlemFestival.csproj.GenerateResource.Cache" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\Jazz.js" />
@@ -522,10 +538,12 @@
     <Content Include="Views\Historic\Historic.cshtml" />
     <Content Include="Views\Talking\Index.cshtml" />
     <Content Include="Views\ContentManagement\Contact.cshtml" />
+    <Content Include="Views\Agenda\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="Content\themes\" />
+    <Folder Include="obj\Release\TempPE\" />
     <Folder Include="Views\ContentManager\" />
   </ItemGroup>
   <ItemGroup>
@@ -569,11 +587,25 @@
       <DependentUpon>201712131310386_naam bij locatie toegevoegd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisine.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisinemapping.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisinemapping2.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisines2.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisineUpdate.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.DescriptionFieldsNullable.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.Initial.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.locationupdate.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.locationupdate2.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.naambijlocatietoegevoegd.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.titleremarksisPayedrating.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.updateLocation.resources" />
+    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Properties.Resources.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.cuisine.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.cuisines2.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.DescriptionFieldsNullable.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.Initial.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.locationupdate.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.locationupdate2.resources" />
+    <EmbeddedResource Include="obj\Release\HaarlemFestival.Migrations.updateLocation.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
