--- a/HaarlemFestival/Web.config
+++ b/HaarlemFestival/Web.config
@@ -10,7 +10,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DBHF" connectionString="Data Source= 194.171.20.101;Initial Catalog=HF1718B1; Persist Security Info=True;User ID=HF1718_grpB1;Password=zU5BKn8Rzy" providerName="System.Data.SqlClient" />
+    <add name="DBHF" connectionString="Data Source= 194.171.20.101;Initial Catalog=HF1718B1;MultipleActiveResultSets=True; Persist Security Info=True;User ID=HF1718_grpB1;Password=zU5BKn8Rzy" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
