--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -159,6 +159,14 @@
     <Compile Include="Controllers\HistoricController.cs" />
     <Compile Include="Controllers\JazzController.cs" />
     <Compile Include="Controllers\TalkingController.cs" />
+    <Compile Include="Migrations\201801042052142_Question toegevoegd.cs" />
+    <Compile Include="Migrations\201801042052142_Question toegevoegd.Designer.cs">
+      <DependentUpon>201801042052142_Question toegevoegd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801042107581_opnieuw question.cs" />
+    <Compile Include="Migrations\201801042107581_opnieuw question.Designer.cs">
+      <DependentUpon>201801042107581_opnieuw question.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\Enums.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -221,6 +229,7 @@
     <Compile Include="Model\DBHF.cs" />
     <Compile Include="Model\Description.cs" />
     <Compile Include="Model\Employee.cs" />
+    <Compile Include="Model\keyAttribute.cs" />
     <Compile Include="Model\Location.cs" />
     <Compile Include="Model\LoginModel.cs" />
     <Compile Include="Model\Order.cs" />
@@ -234,6 +243,7 @@
     <Compile Include="Model\RegisterModel.cs" />
     <Compile Include="Model\Ticket.cs" />
     <Compile Include="Model\TimeSlot.cs" />
+    <Compile Include="Model\Question.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -252,6 +262,7 @@
     <Compile Include="Repositories\IPageRepository.cs" />
     <Compile Include="Repositories\CuisineRepository.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
+    <Compile Include="Repositories\QuestionRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Antlr3.Runtime.dll" />
@@ -501,6 +512,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\FilterOnCuisine.js" />
+    <Content Include="Scripts\Talking.js" />
     <Content Include="Scripts\Jazz.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
@@ -558,6 +570,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Content\themes\" />
     <Folder Include="obj\Release\TempPE\" />
+    <Folder Include="Views\ContentManager\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -598,6 +611,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712131310386_naam bij locatie toegevoegd.resx">
       <DependentUpon>201712131310386_naam bij locatie toegevoegd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801042052142_Question toegevoegd.resx">
+      <DependentUpon>201801042052142_Question toegevoegd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801042107581_opnieuw question.resx">
+      <DependentUpon>201801042107581_opnieuw question.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisine.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.cuisinemapping.resources" />
