--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -522,6 +522,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\FilterOnCuisine.js" />
+    <Content Include="Scripts\ModalHistoric.js" />
     <Content Include="Scripts\Talking.js" />
     <Content Include="Scripts\Jazz.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
@@ -568,7 +569,6 @@
     <Content Include="Views\ContentManagement\Index.cshtml" />
     <Content Include="Views\Dinner\Restaurant.cshtml" />
     <Content Include="Views\Dinner\Index.cshtml" />
-    <Content Include="Views\Historic\Historic.cshtml" />
     <Content Include="Views\Historic\Index.cshtml">
       <BrowseToURL>~/Historic</BrowseToURL>
     </Content>
