--- a/HaarlemFestival/HaarlemFestival.csproj
+++ b/HaarlemFestival/HaarlemFestival.csproj
@@ -159,10 +159,6 @@
     <Compile Include="Controllers\HistoricController.cs" />
     <Compile Include="Controllers\JazzController.cs" />
     <Compile Include="Controllers\TalkingController.cs" />
-    <Compile Include="Migrations\201712151201499_order paymentmethod.cs" />
-    <Compile Include="Migrations\201712151201499_order paymentmethod.Designer.cs">
-      <DependentUpon>201712151201499_order paymentmethod.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\201801042052142_Question toegevoegd.cs" />
     <Compile Include="Migrations\201801042052142_Question toegevoegd.Designer.cs">
       <DependentUpon>201801042052142_Question toegevoegd.cs</DependentUpon>
@@ -247,7 +243,6 @@
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderHasTickets.cs" />
     <Compile Include="Model\OrderLocation.cs" />
-    <Compile Include="Model\OrderTicketJazz.cs" />
     <Compile Include="Model\Page.cs" />
     <Compile Include="Model\PageDescription.cs" />
     <Compile Include="Model\PagePlusActivitiesPlusCuisines.cs" />
@@ -260,7 +255,7 @@
     <Compile Include="Model\Ticket.cs" />
     <Compile Include="Model\TimeSlot.cs" />
     <Compile Include="Model\Question.cs" />
-    <Compile Include="Model\Orderform.cs" />
+    <Compile Include="Model\PagePlusActivityPlusOrderDinner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -530,9 +525,6 @@
     <Content Include="obj\Debug\HaarlemFestival.csproj.CoreCompileInputs.cache" />
     <Content Include="obj\Debug\HaarlemFestival.csproj.GenerateResource.Cache" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
-    <Content Include="ClassDiagram1.cd" />
-    <Content Include="ClassDiagram2.cd" />
-    <Content Include="obj\Debug\HaarlemFestival.csprojResolveAssemblyReference.cache" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\FilterOnCuisine.js" />
@@ -592,7 +584,6 @@
     <Content Include="Views\CheckOut\_CheckOutLayout.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\PaymentMethod.cshtml" />
     <Content Include="Views\ContentManagement\Talking.cshtml" />
-    <Content Include="Views\Shared\_LayoutLoggedIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -639,9 +630,6 @@
     <EmbeddedResource Include="Migrations\201712131310386_naam bij locatie toegevoegd.resx">
       <DependentUpon>201712131310386_naam bij locatie toegevoegd.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201712151201499_order paymentmethod.resx">
-      <DependentUpon>201712151201499_order paymentmethod.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801042052142_Question toegevoegd.resx">
       <DependentUpon>201801042052142_Question toegevoegd.cs</DependentUpon>
     </EmbeddedResource>
@@ -664,11 +652,6 @@
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.locationupdate.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.locationupdate2.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.naambijlocatietoegevoegd.resources" />
-    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.opnieuwquestion.resources" />
-    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.questionaangepast - Copy.resources" />
-    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.questionaangepast.resources" />
-    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.Questiontoegevoegd - Copy.resources" />
-    <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.Questiontoegevoegd.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.titleremarksisPayedrating.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Migrations.updateLocation.resources" />
     <EmbeddedResource Include="obj\Debug\HaarlemFestival.Properties.Resources.resources" />
